# telegram-agent-mcp-client

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose-extended.yaml  compose.yaml  dev.sh  extended.yaml  mcp_config.example.json  mcp_config.json.example.json  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yml  python-package-ci.yml
config/: agent_config.example.json  mcp_config.example.json  user_config.example.json
config/tools/: README.md  _template.py
config/tools/examples/media/: torrent_client.json  torrent_search.json
config/tools/examples/utils/: sequential_thinking.json
config/tools/examples/web/: deep_search.json  news_search.json  web_search.json
config/tools/home/: gree_ac.py
config/tools/local/: filesystem.json  rag_server.json
config/tools/media/: betaseries.py  image_generation.py  torrent_client.json  torrent_search.json
config/tools/utils/: _sequential_thinking.py  sequential_thinking.py
config/tools/web/: deep_search.json  fetch.json  news_search.json  searxng.json  web_search.json  wiki_search.json
docker/: Dockerfile  compose-extended.yaml  compose.yaml  n8n.env.example  rqbit.env.example  torrent_search.env.example
docker-envs/: n8n.env.example  rqbit.env.example  torrent_search.env.example  transmission.config.json  transmission.env.example  transmission.script.0.update_trackers.py  transmission.script.1.deploy_config.sh  transmission.trackers.txt
docs_ui/: .env.example  .gitignore  .npmrc  Dockerfile  README.md  biome.json  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
docs_ui/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
docs_ui/app/api/preview/: route.ts
docs_ui/app/api/upload/: route.ts
docs_ui/app/components/: Generating.tsx  Loading.tsx  NotFound.tsx  Previewing.tsx  Restricted.tsx
docs_ui/app/components/frames/: Landing.tsx  Loading.tsx  Maintenance.tsx  NotFound.tsx
docs_ui/app/components/hooks/: useUpload.tsx
docs_ui/app/layout/: HeroUI.tsx  Navbar.tsx
docs_ui/app/preview/[id]/: page.tsx
docs_ui/app/services/: upload.tsx
docs_ui/app/upload/[chat]/: page.tsx
docs_ui/app/utils/: preview.ts  tw.ts  types.ts  upload.ts
docs_ui/public/: manifest.json
scripts/: deploy-agent.sh  deploy-tools.sh  deploy.sh  dev.sh  logs-dev.sh  logs.sh
telegram_agent/: __init__.py  __main__.py  patch_pydantic_v1.py  test_agent.py  test_bots.py
telegram_agent/src/: __init__.py  agent.py  config.py  llm.py  tools.py  utils.py
telegram_agent/src/bot/: __init__.py  abstract.py  bots.py  handlers.py  logging.py  managers.py  telegram_bot.py  utils.py
telegram_agent/src/bot/handlers/: __init__.py  telegram.py
telegram_agent/src/bot/instances/: __init__.py  telegram.py
telegram_agent/src/bot/managers/: __init__.py  document.py  download.py
telegram_agent/src/core/: __init__.py  agent.py  config.py  graphiti.py  llm.py  prompts.py  tools.py  utils.py
telegram_agent/src/telegram/: base_bot.py  bot.py  logger.py  utils.py
